--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
         </div>
     </main>
 
+    <a href="index.html" class="btn btn-outline-success fw-bold d-none" id="validBtn"></a>
 
     <!-- Delete alert window -->
     <button type="button" class="btn btn-primary d-none" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
